解决配置接口与框架设置冲突问题
